Fix alignment stars
ERM26411

[4.x]

--- a/resources/ext.blueSpiceExtendedSearch.SearchCenter.less
+++ b/resources/ext.blueSpiceExtendedSearch.SearchCenter.less
@@ -223,6 +223,7 @@ div.bs-es-tools {
 	margin-top: 10px;
 	min-height: @results-content-height;
 	display: flex;
+	position: relative;
 	&.bs-extendedsearch-result-featured {
 		background-color: @results-featured-background-color;
 		min-height: @results-featured-content-height;
